Pratictiing commit with index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title> 
+         10 Pieces of Wisdom That Changed My Life
+      </title>
+      <h1> 10 Pieces of Wisdom That Changed My Life </h1>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
+      <p>
+      <ol>
+         <li>You are the Architect of Your Life</li>
+         <li>Be Intentional</li>
+         <li>Lead with Love</li>
+         <li>Ask for Help</li>
+         <li>Patience is Key</li>
+         <li>Don't Care What Other People Think</li>
+         <li>Wait for No One</li>
+         <li>Live in the Moment</li>
+         <li>Progress not Perfection</li>
+         <li>Put Yourself First</li>
+      </ol>
+      </p>
+
+      <h2> You are the Architect of Your Life</h2>
+      <p>
+         One of the most powerful things I've learned is that the way my life is now is because of the series of choices that I've made. If I don't like the way that I am living, I need to make different choices. Taking accountability can be difficult for the average person. However, once you take accountability for your choices it gives you the power to change your life. To change your life, first you must change your mind.
+      </p>
+
+      <h2>Be Intentional</h2>
+      <p></p>
+
    </body>
 </html>
