Finished work on HTML page (for the most part)

--- a/index.html
+++ b/index.html
@@ -2,34 +2,52 @@
 <html>
    <head>
       <title> 
-         10 Pieces of Wisdom That Changed My Life
+         5 Pieces of Wisdom That Changed My Life
       </title>
-      <h1> 10 Pieces of Wisdom That Changed My Life </h1>
+      <h1> 5 Pieces of Wisdom That Changed My Life </h1>
+      <h2>it might help change yours too.</h2>
    </head>
+   
    <body>
       <!-- Write your HTML in this file! -->
-      <p>
+      <header>
+         <img src="images/flowersIMG_4156.jpg" />
+         <h2>Pieces of Wisdom</h2>
       <ol>
          <li>You are the Architect of Your Life</li>
          <li>Be Intentional</li>
-         <li>Lead with Love</li>
-         <li>Ask for Help</li>
-         <li>Patience is Key</li>
          <li>Don't Care What Other People Think</li>
-         <li>Wait for No One</li>
-         <li>Live in the Moment</li>
-         <li>Progress not Perfection</li>
-         <li>Put Yourself First</li>
+         <li>Put Yourself First, Wait For No One</li>
+         <li>Ask For Help</li>
       </ol>
-      </p>
-
+   </header>
+      <article>
       <h2> You are the Architect of Your Life</h2>
       <p>
-         One of the most powerful things I've learned is that the way my life is now is because of the series of choices that I've made. If I don't like the way that I am living, I need to make different choices. Taking accountability can be difficult for the average person. However, once you take accountability for your choices it gives you the power to change your life. To change your life, first you must change your mind.
+         One of the most powerful things I've learned is that the way my life is now is because of the series of choices that I've made. If I don't like the way that I am living, I need to make different choices. The key is to know yourself and take accountability for your actions and choices. Taking accountability can be difficult. However, once you take accountability for your choices it gives you the power to change your life. To change your life, first you must change your mind.
       </p>
+   </article>
 
+   <article>
       <h2>Be Intentional</h2>
-      <p></p>
+      <p>Once I change my mind, the choices I made started to change.  I realized that all of the choices I make can lead toward the new vision I have for my life. I can continue to make old choices and stray farther away from my goals or make choices that will lead me one step closer to the life I want to live.</p>
+   </article>
 
+   <article>
+      <h2>Don't Care What Other People Think</h2>
+      <p>I was born alone and I will more than likely die alone. My opinion on the way I live my ife is the most important. Other people can say what they want, but they do not live the consequences of my choices. Unless they are funding my life, their opinion holds little weight. I know me better than anyone else.</p>
+   </article>
+
+   <article>
+      <h2>Put Yourself First, Wait For No One</h2>
+      <p>I used to be a hopeless romantic. One day, I realized that no one is going to love me like I love me. The moment I began to put myself first and loved myself more, I started vibrating on that frequency and began attracting the people and love in my life that I felt I deserved.The people who were in my life before I decided to change my mind may not make it to where I am trying to end up. Some of these people were understanding and encouraging, some could not understand and tried to hold me back. I hold no ill feelings, it is human nature not to want to be left behind. It taught me to trust myself and move forward no matter what. For example, If I had listened to the people who told me not to go to Mexico or waited for someone to go with me I would still be waiting to go to Mexico. Note to self, keep going.</p>
+   </article>
+
+   <article>
+      <h2>Ask For Help</h2>
+      <p>This is something that I still still struggle with. I grew up solving a lot of my problems by myself. No one gets through life by themselves. Everyone who has made it anywhere has had help along the way. I don't mind receving help, but actually having to ask for it feels dehumanizing. </p>
+   </article>
+
+      <p> &copy; 2022 Gabrielle Pouncil </p>
    </body>
 </html>
