--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
    <head>
+   
       <title> 
          5 Pieces of Wisdom That Changed My Life
       </title>
-      <h1> 5 Pieces of Wisdom That Changed My Life </h1>
-      <h2>it might help change yours too.</h2>
+      <h1 id="mainHeading"> 5 Pieces of Wisdom That Changed My Life </h1>
+      <h2 class="tagline">...it might help change yours too.</h2>
+
+      <link rel="stylesheet" href="styles.css">
    </head>
-   
+<main>
    <body>
       <!-- Write your HTML in this file! -->
       <header>
-         <img src="images/flowersIMG_4156.jpg" />
-         <h2>Pieces of Wisdom</h2>
+         <figure>
+         <img src="images/flowersIMG_4156-700x500.jpg" />
+      <figcaption>Fig. 1: Saucer Magnolia tree that blooms every spring and inspires me to start anew.</figcaption>
+      </figure>
       <ol>
          <li>You are the Architect of Your Life</li>
          <li>Be Intentional</li>
@@ -30,7 +35,7 @@
 
    <article>
       <h2>Be Intentional</h2>
-      <p>Once I change my mind, the choices I made started to change.  I realized that all of the choices I make can lead toward the new vision I have for my life. I can continue to make old choices and stray farther away from my goals or make choices that will lead me one step closer to the life I want to live.</p>
+      <p class="funParagraph" id="testP">Once I change my mind, the choices I made started to change.  I realized that all of the choices I make can lead toward the new vision I have for my life. I can continue to make old choices and stray farther away from my goals or make choices that will lead me one step closer to the life I want to live.</p>
    </article>
 
    <article>
@@ -47,6 +52,7 @@
       <h2>Ask For Help</h2>
       <p>This is something that I still still struggle with. I grew up solving a lot of my problems by myself. No one gets through life by themselves. Everyone who has made it anywhere has had help along the way. I don't mind receving help, but actually having to ask for it feels dehumanizing. </p>
    </article>
+</main>
 
       <p> &copy; 2022 Gabrielle Pouncil </p>
    </body>
